скрыл лишние элементы

--- a/main.css
+++ b/main.css
@@ -93,6 +93,9 @@ button:hover {
             transition: background-color 0.3s ease;
         }
 .restart-button:hover {
-            background-color: #45a049;
-        }
+    background-color: #45a049;
+}
+.hidden {
+    display: none; /* Элемент полностью скрыт */
+}        
     
