--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ button:hover {
         }
 .answer-button {
             padding: 15px;
-            background-color: #ddd;
+            background-color: green;
             border: none;
             cursor: pointer;
             transition: background-color 0.3s ease;
