--- a/main.css
+++ b/main.css
@@ -97,5 +97,50 @@ button:hover {
 }
 .hidden {
     display: none; /* Элемент полностью скрыт */
-}        
+} 
+
+.modal-dialog {
+    display: none; /* Скрываем диалог по умолчанию */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+}
+
+.modal-header h4 {
+    margin-top: 0;
+}
+
+.modal-body p {
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.modal-footer {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.btn {
+    padding: 8px 12px;
+    cursor: pointer;
+    border: none;
+    border-radius: 3px;
+}
+
+.btn-primary {
+    background-color: #007BFF;
+    color: white;
+}
+
+.btn-success {
+    background-color: #28A745;
+    color: white;
+}
     
