добавил окно подсказки мистера су 18.03.2025

--- a/main.css
+++ b/main.css
@@ -116,15 +116,58 @@ button:hover {
     margin-top: 0;
 }
 
-.modal-body p {
-    font-size: 16px;
-    line-height: 1.5;
+.modal-title {
+    margin-top: 0;
+    font-size: 42px;
+    color: #2B2A29;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.modal-image {
+    display: flex;    
+    justify-content: center;    
+    width: 100vh; 
+    margin-top: 30px;
+    width: 256px;
+    height: 256px;
+    
+}
+
+.modal-body {
+    margin-top: 10px;
+    font-size: 18px;
+    color: #FEFEFE;
+    letter-spacing: 2px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 .modal-footer {
     display: flex;
     justify-content: center;
     gap: 10px;
+}
+
+.mistersu-dialog {
+    display: none; /* Скрываем диалог по умолчанию */
+    position: fixed;
+    width: 375px; 
+    height: 734px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+    background-image: url('/pic/bg_blue.jpg'); /* Путь к изображению */
+    background-size: 100% 100%; /* Масштабируем изображение, чтобы оно занимало весь контейнер */
+    background-position: center; /* Центруем изображение */
+    background-repeat: no-repeat; /* Изображение не повторяется */
 }
 
 .btn {
@@ -143,4 +186,20 @@ button:hover {
     background-color: #28A745;
     color: white;
 }
+
+.btn-modal-dialog {
+    margin-top: 30px;
+    width: 327px;
+    height: 64px;
+    border: 2px solid #2B2A29; /* Добавлен стиль границы */
+    border-radius: 50px;
+    background-color: #2E9699;
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;    
+}
+
+
+
     
