--- a/main.css
+++ b/main.css
@@ -237,7 +237,9 @@ button:hover {
 }
 
 .btn-modal-dialog-take-prize-gold {
-    display: flex; /* Активируем Flexbox */
+    display: flex; 
+    justify-content: center;     
+    align-items: center;         
     margin-top: 30px;
     width: 294px;
     height: 64px;
