--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
 
+@font-face {
+    font-family: 'Pusia'; 
+    src: url('fonts/pusia_bold.otf') format('truetype'), /* Путь до файла шрифта в формате ttf */                     
+}
 body {
-            font-family: Arial, sans-serif;
+            font-family: 'Pusia', Arial, sans-serif;    
             background-color: #f0f0f0;
             margin: 0;
             padding: 20px;
@@ -14,7 +18,7 @@ body {
             width: 375px; 
             height: 734px;
             text-align: center;
-            background-color: white;
+            background-color: gray;
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -42,19 +46,25 @@ button:hover {
             margin-bottom: 20px;
         }
 .answers {
-            display: grid;
-            gap: 10px;
-            grid-template-columns: 1fr 1fr;
+        display: grid;        
+        gap: 10px;
+        grid-template-columns: 1fr; /* Один столбец */
         }
 .answer-button {
-            padding: 15px;
-            background-color: green;
-            border: none;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
+        padding: 15px;
+        width: 327px;
+        height: 64px;
+        border: 2px solid #2B2A29; /* Добавлен стиль границы */
+        border-radius: 50px;
+        background-color: #517709;
+        font-size: 18px;
+        font-family: 'Pusia', Arial, sans-serif;        
+        letter-spacing: 2px;    
+        cursor: pointer;
+        transition: background-color 0.3s ease;
         }
 .answer-button:hover {
-            background-color: #bbb;
+            background-color: #F04F23;
         }
 .result {
             margin-top: 20px;
@@ -129,7 +139,7 @@ button:hover {
     font-size: 42px;
     color: #2B2A29;
     font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Pusia', Arial, sans-serif;    
     text-transform: uppercase;
     text-align: center;
 }
@@ -138,8 +148,8 @@ button:hover {
     margin-top: 0;
     font-size: 28px;
     color: #2B2A29;
-    font-weight: bold;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;    
+    font-family: 'Pusia', Arial, sans-serif;    
     text-transform: uppercase;
     text-align: center;
 }
@@ -185,7 +195,7 @@ button:hover {
     font-size: 18px;
     color: #FEFEFE;
     letter-spacing: 2px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Pusia', Arial, sans-serif;    
     text-transform: uppercase;
     text-align: center;
     line-height: 120%;
@@ -233,6 +243,24 @@ button:hover {
     background-repeat: no-repeat; /* Изображение не повторяется */
 }
 
+.main_questions_screen {
+    display: none; /* Скрываем диалог по умолчанию */
+    position: fixed;
+    width: 375px; 
+    height: 734px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+    background-image: url('pic/bg_blue.jpg'); /* Путь к изображению */
+    background-size: 100% 100%; /* Масштабируем изображение, чтобы оно занимало весь контейнер */
+    background-position: center; /* Центруем изображение */
+    background-repeat: no-repeat; /* Изображение не повторяется */
+}
+
 .btn {
     padding: 8px 12px;
     cursor: pointer;
@@ -258,7 +286,7 @@ button:hover {
     border-radius: 50px;
     background-color: #517709;
     font-size: 18px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Pusia', Arial, sans-serif;    
     text-transform: uppercase;
     letter-spacing: 2px;    
 }
@@ -272,7 +300,7 @@ button:hover {
     border-radius: 50px;
     background-color: #F04F23;
     font-size: 18px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Pusia', Arial, sans-serif;    
     text-transform: uppercase;
     letter-spacing: 2px;    
 }
@@ -288,7 +316,7 @@ button:hover {
     border-radius: 50px;
     background-color: #F04F23;
     font-size: 18px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Pusia', Arial, sans-serif;    
     text-transform: uppercase;
     letter-spacing: 2px;    
 }
@@ -313,7 +341,7 @@ button:hover {
     border-radius: 50px;
     background-color: #2E9699;
     font-size: 18px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Pusia', Arial, sans-serif;    
     text-transform: uppercase;
     letter-spacing: 2px;    
 }
@@ -326,7 +354,7 @@ button:hover {
     border-radius: 50px;
     background-color: #C98F22;
     font-size: 18px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Pusia', Arial, sans-serif;    
     text-transform: uppercase;
     letter-spacing: 2px;    
 }
