--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@ body {
             align-items: center;
             height: 100vh;            
         }
-.container {            
+.rules {            
             width: 375px; 
             height: 734px;
             text-align: center;
@@ -39,20 +39,20 @@ button:hover {
             background-color: #0056b3;
         }
 .question-container {
-            margin-top: 40px;
+            margin-top: 40px;                         
         }
 .question {
             font-size: 18px;
             margin-bottom: 20px;
         }
-.answers {
+.answers {        
         display: grid;        
         gap: 10px;
-        grid-template-columns: 1fr; /* Один столбец */
+        grid-template-columns: 1fr; 
         }
-.answer-button {
-        padding: 15px;
-        width: 327px;
+
+.answer-button {            
+        width: 100%;
         height: 64px;
         border: 2px solid #2B2A29; /* Добавлен стиль границы */
         border-radius: 50px;
@@ -123,7 +123,6 @@ button:hover {
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
-
     background-image: url('pic/green_bg.jpg'); /* Путь к изображению */
     background-size: 100% 100%; /* Масштабируем изображение, чтобы оно занимало весь контейнер */
     background-position: center; /* Центруем изображение */
@@ -144,7 +143,7 @@ button:hover {
     text-align: center;
 }
 
-.modal-lose-title {
+.title_28_black {
     margin-top: 0;
     font-size: 28px;
     color: #2B2A29;
@@ -173,8 +172,20 @@ button:hover {
 }
 
 .modal-image-lose img {
-    width: 360px;
+    width: 198px;
     height: 250px;    
+    margin: auto; /* Отцентрируем изображение внутри контейнера */
+}
+
+.image-rules {
+    display: flex;    
+    justify-content: center;    
+    margin-top: 30px;    
+}
+
+.image-rules img {
+    width: 327px;
+    height: 263px;    
     margin: auto; /* Отцентрируем изображение внутри контейнера */
 }
 
