--- a/main.css
+++ b/main.css
@@ -38,6 +38,20 @@ body {
             background-size: 100% 100%;
             background-position: center; /* Центруем изображение */
             background-repeat: no-repeat; /* Изображение не повторяется */
+        }
+.main_questions_screen {
+            display: none; /* Скрываем диалог по умолчанию */
+            position: fixed;
+            width: 375px; 
+            height: 734px;  
+            z-index: 1000;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+            background-image: url('pic/main_screen_bg.png'); /* Путь к изображению */
+            background-size: 100% 100%; /* Масштабируем изображение, чтобы оно занимало весь контейнер */
+            background-position: center; /* Центруем изображение */
+            background-repeat: no-repeat; /* Изображение не повторяется */
         }        
 h1 {
             color: #333;
@@ -80,7 +94,9 @@ button:hover {
             background-color: #C98F22;
         }        
 .question-container {
-            margin-top: 40px;                         
+            display: flex; 
+            justify-content: center;
+            margin-top: 10px;                         
         }
 .question {
             font-size: 18px;
@@ -253,6 +269,7 @@ button:hover {
 .image-main-screen-cat {
     display: flex;    
     justify-content: center;        
+    margin-left: 20px;
 }
 
 .image-main-screen-cat img {
@@ -284,11 +301,13 @@ button:hover {
     line-height: 120%;
 }
 
-.start-screen-body {    
-    width: 327px;
+.start-screen-body {   
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%; /* Задайте ширину блока, если хотите ограничить его размер */    
     height: 120px;
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 18px;        
     color: #322A22;
     background-color: #EAD0A0;
     border: 2px solid #B18636; /* Добавлен стиль границы */
@@ -301,12 +320,12 @@ button:hover {
 }
 
 .rules-screen-body {    
-    width: 327px;
-    height: 431px;    
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;   
     font-size: 18px;
-    color: #322A22;
-    padding: 16px;
-    gap: 10;
+    color: #322A22;        
+    padding: 5px;    
     background-color: #EAD0A0;
     border: 2px solid #B18636; /* Добавлен стиль границы */
     border-radius: 16px;
@@ -317,10 +336,11 @@ button:hover {
     line-height: 120%;
 }
 
-.main-screen-body {    
-    width: 327px;
-    height: 130px;
-    margin-top: 10px;
+.main-screen-body {   
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;     
+    height: 130px;    
     font-size: 18px;
     color: #322A22;
     background-color: #EAD0A0;
@@ -370,21 +390,6 @@ button:hover {
     border-radius: 5px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
     background-image: url('pic/yellow_bg.jpg'); /* Путь к изображению */
-    background-size: 100% 100%; /* Масштабируем изображение, чтобы оно занимало весь контейнер */
-    background-position: center; /* Центруем изображение */
-    background-repeat: no-repeat; /* Изображение не повторяется */
-}
-
-.main_questions_screen {
-    display: none; /* Скрываем диалог по умолчанию */
-    position: fixed;
-    width: 375px; 
-    height: 734px;  
-    z-index: 1000;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
-    background-image: url('pic/green_bg.jpg'); /* Путь к изображению */
     background-size: 100% 100%; /* Масштабируем изображение, чтобы оно занимало весь контейнер */
     background-position: center; /* Центруем изображение */
     background-repeat: no-repeat; /* Изображение не повторяется */
@@ -502,9 +507,34 @@ button:hover {
 }
 
 .btn-main-screen-option img {
-    width: 100%; /* Растягиваем изображение на всю ширину кнопки */
-    height: 100%; /* Растягиваем изображение на всю высоту кнопки */
+    width: 90%; /* Растягиваем изображение на всю ширину кнопки */
+    height: 90%; /* Растягиваем изображение на всю высоту кнопки */
     object-fit: contain; /* Сохраняем пропорции изображения */
+}
+
+.ved_timer {
+    display: flex;
+    align-items: center; /* Выравнивание элементов по вертикальной оси */
+    gap: 10px; /* Отступ между элементами (можно настроить по своему усмотрению) */
+}
+
+.timer-image {
+    background-image: url('pic/time_bg.png'); /* Путь к вашему изображению */
+    width: 100px;
+    height: 70px;    
+    position: relative;
+    text-align: center;
+}
+
+.timer-text {
+    color: black;
+    font-size: 32px;
+    font-family: 'Pusia', Arial, sans-serif;    
+    text-transform: uppercase;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
