--- a/main.css
+++ b/main.css
@@ -129,6 +129,7 @@ button:hover {
             margin-top: 20px;
             font-size: 16px;
             color: green;
+            text-align: center;
         }
 .hints {
         margin-top: 10px;
@@ -151,7 +152,7 @@ button:hover {
         }
 .disabled {
             opacity: 0.5;
-            cursor: not-allowed;
+            cursor: not-allowed;            
         }
 .final-screen {
             margin-top: 40px;
@@ -212,6 +213,7 @@ button:hover {
 .title_28_black {
     margin-top: 0;
     font-size: 28px;
+    line-height: 1;    
     color: #2B2A29;
     font-weight: bold;    
     font-family: 'Pusia', Arial, sans-serif;    
@@ -305,8 +307,7 @@ button:hover {
     margin-left: auto;
     margin-right: auto;
     width: 90%; /* Задайте ширину блока, если хотите ограничить его размер */    
-    height: 120px;
-    margin-top: 10px;
+    height: 120px;    
     font-size: 18px;        
     color: #322A22;
     background-color: #EAD0A0;
@@ -511,6 +512,33 @@ button:hover {
     height: 90%; /* Растягиваем изображение на всю высоту кнопки */
     object-fit: contain; /* Сохраняем пропорции изображения */
 }
+
+.btn-main-screen-option-active {
+    width: 75px;
+    height: 64px;
+    border: 2px solid #2B2A29; /* Добавлен стиль границы */
+    border-radius: 24px;
+    gap: 10;
+    cursor: pointer; /* Указатель мыши становится рукой при наведении */
+    background-color: red; /* Прозрачность фона кнопки */
+    display: flex; /* Размещаем изображение по центру */
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-main-screen-hint {
+    width: 75px;
+    height: 64px;
+    border: 2px solid #2B2A29; /* Добавлен стиль границы */
+    border-radius: 24px;
+    gap: 10;
+    cursor: pointer; /* Указатель мыши становится рукой при наведении */
+    background-color: green; /* Прозрачность фона кнопки */
+    display: flex; /* Размещаем изображение по центру */
+    align-items: center;
+    justify-content: center;
+}
+
 
 .ved_timer {
     display: flex;
