--- a/main.css
+++ b/main.css
@@ -1,7 +1,11 @@
 
 @font-face {
     font-family: 'Pusia'; 
-    src: url('fonts/pusia_bold.otf') format('truetype'), /* Путь до файла шрифта в формате ttf */                     
+    src: url('fonts/pusia_bold.otf') format('truetype') 
+}
+@font-face {
+    font-family: 'Commissioner'; 
+    src: url('fonts/commissioner.ttf') format('truetype')                     
 }
 body {
             font-family: 'Pusia', Arial, sans-serif;    
@@ -63,7 +67,7 @@ button {
             border: 2px solid #2B2A29; /* Добавлен стиль границы */
             border-radius: 24px;
             font-size: 18px;
-            font-family: 'Pusia', Arial, sans-serif;    
+            font-family: 'Commissioner', Arial, sans-serif;    
             color: #FEFEFE;
             text-transform: uppercase;
             letter-spacing: 2px;
@@ -82,7 +86,7 @@ button:hover {
             border: 2px solid #2B2A29; /* Добавлен стиль границы */
             border-radius: 24px;
             font-size: 18px;
-            font-family: 'Pusia', Arial, sans-serif;    
+            font-family: 'Commissioner', Arial, sans-serif;    
             color: #FEFEFE;
             text-transform: uppercase;
             letter-spacing: 2px;
@@ -114,7 +118,7 @@ button:hover {
         border: 2px solid #2B2A29; /* Добавлен стиль границы */
         border-radius: 24px;
         font-size: 18px;
-        font-family: 'Pusia', Arial, sans-serif;    
+        font-family: 'Commissioner', Arial, sans-serif;    
         color: #FEFEFE;
         text-transform: uppercase;
         letter-spacing: 2px;
@@ -205,7 +209,7 @@ button:hover {
     font-size: 42px;
     color: #2B2A29;
     font-weight: bold;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     text-align: center;
 }
@@ -216,7 +220,7 @@ button:hover {
     line-height: 1;    
     color: #2B2A29;
     font-weight: bold;    
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     text-align: center;
 }
@@ -297,7 +301,7 @@ button:hover {
     font-size: 18px;
     color: #FEFEFE;
     letter-spacing: 2px;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     text-align: center;
     line-height: 120%;
@@ -314,7 +318,7 @@ button:hover {
     border: 2px solid #B18636; /* Добавлен стиль границы */
     border-radius: 16px;
     letter-spacing: 2px;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     text-align: center;
     line-height: 120%;
@@ -331,7 +335,7 @@ button:hover {
     border: 2px solid #B18636; /* Добавлен стиль границы */
     border-radius: 16px;
     letter-spacing: 2px;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     text-align: center;
     line-height: 120%;
@@ -348,7 +352,7 @@ button:hover {
     border: 2px solid #B18636; /* Добавлен стиль границы */
     border-radius: 16px;
     letter-spacing: 2px;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     text-align: center;
     line-height: 120%;
@@ -374,7 +378,7 @@ button:hover {
 .timer-text {
     color: black;
     font-size: 32px;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     position: absolute;
     top: 50%;
@@ -465,7 +469,7 @@ button:hover {
     border-radius: 24px;
     background-color: #517709;
     font-size: 18px;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     letter-spacing: 2px;    
 }
@@ -481,7 +485,7 @@ button:hover {
     border-radius: 24px;
     background-color: #F04F23;
     font-size: 18px;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     letter-spacing: 2px;    
 }
@@ -497,7 +501,7 @@ button:hover {
     border-radius: 24px;
     background-color: #F04F23;
     font-size: 18px;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     letter-spacing: 2px;    
 }
@@ -522,7 +526,7 @@ button:hover {
     border-radius: 50px;
     background-color: #2E9699;
     font-size: 18px;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     letter-spacing: 2px;    
 }
@@ -535,7 +539,7 @@ button:hover {
     border-radius: 50px;
     background-color: #C98F22;
     font-size: 18px;
-    font-family: 'Pusia', Arial, sans-serif;    
+    font-family: 'Commissioner', Arial, sans-serif;    
     text-transform: uppercase;
     letter-spacing: 2px;    
 }
