--- a/main.css
+++ b/main.css
@@ -507,6 +507,12 @@ h1 {
     letter-spacing: 2px;    
 }
 
+.btn-modal-dialog-continue:hover {    
+    transform: scale(1.05); /* Увеличение кнопки при наведении */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25); /* Добавление тени */
+    }
+
+
 .btn-modal-dialog-take-prize {
     display: flex; /* Активируем Flexbox */
     justify-content: center;     
@@ -514,14 +520,19 @@ h1 {
     width: 140px;
     height: 64px;
     gap: 10px;
+    color: white;
     border: 2px solid #2B2A29; /* Добавлен стиль границы */
     border-radius: 24px;
     background-color: #F04F23;
     font-size: 18px;
     font-family: 'Commissioner', Arial, sans-serif;    
-    text-transform: uppercase;
-    letter-spacing: 2px;    
+    text-transform: uppercase;    
 }
+
+.btn-modal-dialog-take-prize:hover {    
+    transform: scale(1.05); /* Увеличение кнопки при наведении */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25); /* Добавление тени */
+    }
 
 .btn-modal-dialog-take-prize-gold {
     display: flex; 
@@ -533,11 +544,16 @@ h1 {
     border: 2px solid #2B2A29; /* Добавлен стиль границы */
     border-radius: 24px;
     background-color: #F04F23;
+    color: white;
     font-size: 18px;
     font-family: 'Commissioner', Arial, sans-serif;    
-    text-transform: uppercase;
-    letter-spacing: 2px;    
+    text-transform: uppercase;    
 }
+
+.btn-modal-dialog-take-prize-gold:hover {    
+    transform: scale(1.05); /* Увеличение кнопки при наведении */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25); /* Добавление тени */
+    }
 
 .icon {
     margin-right: 10px; /* Небольшой отступ между иконкой и текстом */
